--- a/estilo.css
+++ b/estilo.css
@@ -362,42 +362,42 @@
   transition: all 0.5s;
 }
 * .nos .contenedor .item1 {
-  background-image: url("../multimedia/bowl_mix/item1.jpg");
+  background-image: url("./multimedia/bowl_mix/item1.jpg");
   background-position: center;
   background-size: cover;
 }
 * .nos .contenedor .item2 {
-  background-image: url("../multimedia/bowl_mix/item2.jpg");
+  background-image: url("./multimedia/bowl_mix/item2.jpg");
   background-position: center;
   background-size: cover;
 }
 * .nos .contenedor .item3 {
-  background-image: url("../multimedia/bowl_mix/item3.jpg");
+  background-image: url("./multimedia/bowl_mix/item3.jpg");
   background-position: center;
   background-size: cover;
 }
 * .nos .contenedor .item4 {
-  background-image: url("../multimedia/bowl_mix/item4.jpg");
+  background-image: url("./multimedia/bowl_mix/item4.jpg");
   background-position: center;
   background-size: cover;
 }
 * .nos .contenedor .item5 {
-  background-image: url("../multimedia/bowl_mix/item5.jpg");
+  background-image: url("./multimedia/bowl_mix/item5.jpg");
   background-position: center;
   background-size: cover;
 }
 * .nos .contenedor .item6 {
-  background-image: url("../multimedia/bowl_mix/item6.jpg");
+  background-image: url("./multimedia/bowl_mix/item6.jpg");
   background-position: center;
   background-size: cover;
 }
 * .nos .contenedor .item7 {
-  background-image: url("../multimedia/bowl_mix/item7.jpg");
+  background-image: url("./multimedia/bowl_mix/item7.jpg");
   background-position: center;
   background-size: cover;
 }
 * .nos .contenedor .item8 {
-  background-image: url("../multimedia/bowl_mix/item8.jpg");
+  background-image: url("./multimedia/bowl_mix/item8.jpg");
   background-position: center;
   background-size: cover;
 }
@@ -545,7 +545,7 @@
 * .bodyW {
   height: 100vh;
   width: 100%;
-  background: url(../multimedia/desarrollador.jpg);
+  background: url(./multimedia/desarrollador.jpg);
   background-repeat: no-repeat;
   background-size: cover;
 }
