--- a/estilo.sass
+++ b/estilo.sass
@@ -1,49 +1,71 @@
-  /* FUENTES IMPORTADAS */
+// FUENTES IMPORTADAS 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Raleway:wght@200&family=Roboto:wght@300&family=Tilt+Prism&display=swap'
 )
-/* font-family: 'Montserrat', sans-serif
-font-family: 'Raleway', sans-serif
-font-family: 'Roboto', sans-serif
-font-family: 'Tilt Prism', cursive */
 
 //MI PALETA
 $COLOR1:#F0A04B  
 $COLOR2:#E1EEDD
+$COLOR3orange:#D95204
+$COLOR3green:#1e5128e2
+
+//MIS FUENTES
+$fontprincipal: 'Roboto', sans-serif
+$fontaux: 'Tilt Prism', cursive 
+$fontpedido:'Skranji', cursive
+
+//MI MIXIN 
+@mixin h-w($higth, $width)
+    height: $higth
+    width: $width
+
+@mixin clasic($higth, $width, $bgr, $padding)
+    height: $higth
+    width: $width
+    background-color: $bgr
+    padding: $padding
+
+
+@mixin fuente($fontsize, $color, $textaling)
+    font-size: $fontsize
+    color: $color
+    text-align: $textaling
+
+@mixin brg($brgsz, $brgps)
+    background-size: $brgsz
+    background-position: $brgps
+
 
 *
-font-family: 'Roboto', sans-serif
-/* SECCIION MAIN STAR  */
+font-family: $fontprincipal
+//SECCIION MAIN STAR 
+
 .main-pedido 
-    height: 350px
-    width: 100%
-    background-color:gray
-    padding-left: 10px
-    background-image: url(multimedia/Fondo.jpg)
-    background-position: center
-    background-size: cover
+    @include clasic(350px, 100%, gray , 0px )
+    padding-left: 10px 
+    background-image: url(./multimedia/index/Fondo.jpg)
+    @include brg(cover, center)
     display: flex
     justify-content: center
     align-items: center  
     .pedido-box
-    background-color: rgba(99, 81, 16, 0.808)
-    height: 200px
-    width: 70%
-    padding: 10px
+        @include clasic(230px,70% ,rgba(99, 81, 16, 0.808) ,10px )
     border: 3px solid orange     
     
-        .pedido-box h1
+        h1
         color: black
-        text-shadow: 2px 2px rgba(255, 255, 255, 0.811) 
+        font-weight: 600
+        text-shadow: 2px 2px $COLOR1 
         text-transform: uppercase
-        font-size: 25px
+        font-size: 23px
         font-family: 'Raleway', sans-serif 
         
-        .pedido-box p
+        p
         color: white
         text-align: justify
         font-family: 'Montserrat', sans-serif
+        font-weight: 600
         
-        .pedido-box a
+        a
         color: white
         background-color: orange
         width: 100px
@@ -52,70 +74,81 @@ font-family: 'Roboto', sans-serif
         border-radius: 3px
         text-decoration: none
         
-            .main-pedido a:hover
+            a:hover
             color:orange  
             background-color: white
             
 
-/* SECCIION MAIN END  */
-/* SECCIION ESPECIALIDADES STAR  */
+//SECCIION MAIN END 
+//SECCIION ESPECIALIDADES STAR 
 .texto-n-e
-    text-align:center
-    font-size: 20px
+    @include fuente(20px, $COLOR1, center)
     font-family: 'Roboto', sans-serif
-    color:  #F0A04B
     padding: 10px   
 
 .nesp
-    height: 1200px
-    width: 100%
-    background-color:#41644A 
+    @include h-w(1200px, 100%)
+    background-color:$COLOR2
     display: flex
     flex-direction: column
-    align-items: center                                                             
+    align-items:center                                                  
     .pollo-plancha
-    background: rgb(36,33,0)
-    background: linear-gradient(90deg, rgba(36,33,0,1) 0%, rgba(98,121,9,1) 100%, rgba(91,255,0,1) 100%)
-    height: 350px
-    width: 90%
+    @include clasic(350px, 90%, rgb(36,33,0) , 5px )
+    background: linear-gradient(90deg, rgb(43, 40, 5) 0%, rgb(50, 59, 8) 100%, rgba(89, 255, 0, 0.53) 100%)
     border: 3px solid #F0A04B
-    padding: 5px
+    border-radius: 5px
     margin: 5px
     display: block
     
-    .pollo-plancha h3
-    font-size: 15px
+    h3
+    @include fuente(15px, #f39e43, center)
     text-transform: uppercase
-    color:#f39e43
-    text-align: center
     text-shadow: 2px 2px rgba(0, 0, 0, 0.7)
     
-    .pollo-plancha p
-    font-size: 15px
-    text-align: justify
-    color: white
-    
-    .pollo-plancha-img
-    height:140px
-    width: 50%
+    p
+    @include fuente(15px, white, start)
+
+    img
+    @include h-w(140px, 50%)    
     margin-left: 25%
     
     .rounded
-    height:140px
-    width: 50%
+    @include h-w(140px, 50%)
     margin-left: 25%
+    @each $esp in especialidad1,especialidad2,especialidad3,especialidad4 
+        .#$esp 
+        background-image: url("./multimedia/especialidades/#$esp.jpg")
+        @include brg(cover, center)
+        
     
 
-/* SECCIION ESPECIALIDADES END  */
-/* CONTACTO STAR*/
+//SECCIION ESPECIALIDADES END
+
+//HORARIOS STAR
+#hora
+    @include h-w(150px, 100%)  
+    padding: 4px
+    background-color: $COLOR3green
+    color: white
+    h2
+        text-align: center
+        font-size: 20px
+    
+    li
+        text-align: center
+        list-style: none
+        font-size: 15px
+    
+    
+
+//HORARIOS END
+//CONTACTO STAR
 .contacto
-    background-color: #E1EEDD 
-    height: 420px
-    .contacto h2
-    text-align:center
-    font-size: 20px
+background-color: #E1EEDD 
+height: 420px
+    h2
+    @include fuente(20px, black, center)  
     background-color:#E1EEDD
-    color:  black
     padding-top: 5px
     
     .list-contacto
@@ -127,120 +160,29 @@ font-family: 'Roboto', sans-serif
     .mapa
     display: flex
     justify-content: center
-    height: 200px
+    height: 190px
     
 
-/* CONTACTO END*/
-/* FOOTER STAR  */
+//CONTACTO END
+//FOOTER STAR  
 .footer
     background-color: #9D5C0D
     margin-top: 3px
     padding: 3px
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
-    .footer h2
-    color: #E1EEDD
-    font-size: 20px
-    text-align: center
+    h2
+    @include fuente(20px, $COLOR2, center)
     padding: 3px
     
-    .footer p
-    color: #E1EEDD
-    font-size: 12px
-    text-align: center
+    p
+    @include fuente(12px, $COLOR2, center)
     
 
-/* FOOOTER END  */
-/* PEDIDO.HTML     SECCION DE PEDIDOS STAR*/
-.pedidoh1
-    background-color: #E1EEDD
-    font-size: 15px
-    border-radius: 3px solid #F0A04B
-    color:black
-
-.armabolw
-    height: 100vh
-    width: 100%
-/* SECCION DE PEDIDOS END*/
-/* SOBRE NOSOTROS HTML - STAR */
-.nos
-    background-color:#E1EEDD
-    height: auto
-    .nos h3
-    font-size: 25px
-    text-align: center
-    color:black
-    padding: 15px
-    font-style: italic
-    
-    .nos-gal
-    text-align: center
-    padding: 5px
-    
-    .contenedor
-    height: auto
-    width: 100%
-    background-color: rgb(7, 164, 81)
-    display: grid
-    grid-template-columns: repeat(1, 1fr)
-    grid-template-rows: repeat(8, 200px)   
-    
-        .item
-        background-size: cover
-        background-position: center
-        border: 3px solid rgb(0, 91, 0)
-        transition: all 0.5s   
-        
-            .item1
-            background-image: url(multimedia/1.jpg)
-            
-            .item2
-            background-image: url(multimedia/5.jpg)
-            
-            .item3
-            background-image: url(multimedia/6.jpg)
-            
-            .item4
-            background-image: url(multimedia/bowl.jpg)
-            
-            .item5
-            background-image: url(multimedia/Fondo.jpg)
-            
-            .item6
-            background-image: url(multimedia/bowl\ \(5\).jpg)
-            
-            .item7
-            background-image: url(multimedia/6.jpg)
-            
-            .item8
-            background-image: url(multimedia/Bolw2.jpg)
-            
-
-/* SOBRE NOSOTROS HTML - END */
-/* CREADOR WEB HTML - STAR */
-.web-deploy
-    background-image: url(multimedia/desarrollador.jpg)
-    background-position: center
-    background-size: cover
-    height: 100vh
-    color: white
-    padding: 15px
-
-/* CREADOR WEB HTML - END */
-/* INICIO RESPONSIVE */
-@media only screen and (min-width: 480px)and (max-width: 768px)
-        /* Sector Sobre nosotros html */
-    .contenedor 
-    grid-template-columns: 1fr 1fr
-    grid-template-rows: repeat(4, 250px )
-    grid-gap: 5px
-    padding-top: 15px
-    
-    .footer
-    height: 100px
-    
-
+// FOOOTER END 
+//INICIO RESPONSIVE 
+//@media only screen and (min-width: 480px)and (max-width: 768px)
 @media only screen and (min-width: 600px)and (max-width: 719px)
-/* Sector Nuestras especialidades (index)*/
+//Sector Nuestras especialidades (index)
     .nesp
     flex-wrap: wrap
     justify-content: space-around
@@ -248,18 +190,15 @@ font-family: 'Roboto', sans-serif
     align-content: center
     height: 800px
     .pollo-plancha
-    height: 350px
-    width: 300px
+    @include h-w(350px, 300px)
     
     .text-pollo
     text-align: center
     width: 100%
     font-size: 12px
 
-
-
 @media only screen and (min-width: 719px) and (max-width: 1023px)
-/* Sector Nuestras especialidades (index)*/
+//Sector Nuestras especialidades (index)
     .texto-n-e
     font-size: 40px
     text-align: center
@@ -269,86 +208,82 @@ font-family: 'Roboto', sans-serif
     justify-content: space-around
     align-items: center
     .pollo-plancha
+        @include h-w(250px, 75%)
         align-items: center
         align-content: space-between
-        height: 250px
-        width: 75%
         display: flex
         padding: 5px
         .text-pollo
-        font-size: 20px
-        text-align: justify
+        @include fuente(20px, white, justify)
         float: left
         width: 400px
         padding: 3px
         
         .rounded 
-        height: 200px
-        width: 200px
+        @include h-w(200px, 200px)
         float: right
         
-        .pollo-plancha h3
+        h3
         font-size: 20px
         
-        .pollo-plancha p
+        p
         font-size: 15px
         padding: 3px
         
         
     
-/* Sector Sobre nosotros html */
-.contenedor
-    grid-template-columns: repeat(3 , 1fr)
-    grid-template-rows: repeat(6 , 200px)
-    .item
-        background-size: cover
-        background-position: center
-        border: 3px solid green 
-        .item1
-        grid-column:1/4
-        grid-row:5/7
+    #hora
+        height: 170px
+        padding: 3px
+        h2
+            font-size: 40px
         
-        .item2
-        grid-column: 1/3
-        grid-row: 1/3
+        li
+            font-size: 20px
         
-        .item3
-        grid-column: 1/2
-        grid-row: 3/5
+    
+    .contacto 
+        height: 500px
+        h2
+        font-size: 40px
+        padding-top: 20px
         
-        .item7
-        grid-column:  3/4 
-        grid-row:3/5 
-
-
+        .list-contacto
+        font-size: 20px
+        display: flex
+        
+        .mapa
+        display: flex
+        justify-content: center
+        height: 240px  
+        
     
 
 @media only screen and (min-width: 1023px) 
 .header
     font-size: 25px      
 
-/* Main Index */
+//Main Index 
 .main-pedido 
     height: 450px
     .pedido-box
-    height: 300px
-    width: 60%
+    @include h-w(300px, 60%)
     padding: 15px
     border: 3px solid orange
-    .pedido-box h1
+    h1
         font-size: 40px
     
-    .pedido-box p
+    p
         font-size: 30px
     
-    .pedido-box a
+    a
         width: 200px
         padding: 10px
         font-size: 20px
     
     
 
-/* Sector especialidades (index) */
+//Sector especialidades (index)
 .texto-n-e
 font-size: 45px
 text-align: center
@@ -356,31 +291,41 @@ text-align: center
 .nesp
     justify-content: space-around
     .pollo-plancha
+    @include h-w(250px, 70%)
     align-items: center
     align-content: space-around
-    height: 250px
-    width: 70%
     display: flex
     padding: 5px
         .rounded 
-        height: 100%
-        width: 30%
+        @include h-w(100%, 60%)
         float: right
     
-        .pollo-plancha h3
+        h3
         font-size: 25px
     
-        .pollo-plancha p
+        p
         font-size: 22px
         padding: 3px
         margin-left: 20px
     
     
 
-/* Sector contacto (index) */
+//Sector horarios (index) 
+#hora
+    height: 180px
+    padding: 3px
+    h2
+        font-size: 40px
+    
+    li
+        font-size: 20px
+    
+
+
+//Sector contacto (index) 
 .contacto 
     height: 500px
-    .contacto h2
+    h2
     font-size: 40px
     padding-top: 20px
     
@@ -394,33 +339,15 @@ text-align: center
     height: 250px  
     
 
-/* Sector Sobre NOSOTROS HTML */
-.nos
-height: 1130px
-    .nos-gal
-    font-size: 40px
-    padding: 15px
-    
-    .nos h3
-    font-size: 30px 
-    
-    .contenedor
-    grid-template-columns: repeat(4 , 1fr)
-    grid-template-rows: repeat(2 , 450px)   
-    .item
-    filter: sepia(100%)  
-        .item:hover
-        filter: sepia(0%)
-        transform: scale(1.06)  
-            
-        
-    
 
-/* Sector footer Sobre NOSOTROS HTML */
-footer p
-font-size: 20px
-footer p a
-    font-size: 30px
-    
+
+@import "_nosotros.scss"
+@import "_contacto.scss"
+@import "_creadorweb.scss"
+@import "_pedido.scss"
+
+
+
+
 
 
